fix: focus outline size on mobile menu button

--- a/assets/scss/templates/_navigation.scss
+++ b/assets/scss/templates/_navigation.scss
@@ -46,6 +46,7 @@
     padding: 0;
     font-size: 1.8rem;
     width: 26px;
+    height: 26px;
     color: lighten($black, 13.33);
     border: 0;
     transition: 0.3s ease;
